Fix for FF3 DatePicker layout issue
git-svn-id: http://code.extjs.com/svn/ext/trunk@1925 c0a82769-a6a8-4f8a-96ba-7530dc2e272d

--- a/resources/css/date-picker.css
+++ b/resources/css/date-picker.css
@@ -36,6 +36,7 @@
 }
 .x-date-middle {
     padding-top:2px;padding-bottom:2px;
+    width:130px; /* FF3 */
 }
 .x-date-right a, .x-date-left a{
     display:block;
